fix overlapping prb

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -133,7 +133,7 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)),url(../
 .my_project_card{
     text-align: center;
     height:25rem;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
     color:gray;
 }
 .card-title{
